--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		<script src="Script\Classes\Application.js"></script>
 		<script src="Script\Classes\ParticleSystem.js"></script>
 		<script src="Script\Classes\PointerLockControls.js"></script>
-		<script src="Script\Classes\MinecraftSelection.js"></script>
 		<script src="Script\Generic\Interactor.js"></script>
 		<script src="Script\Generic\Logger.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
@@ -27,6 +26,7 @@
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
 		<script src="Script\Reusable\Polyfill.js"></script>
-		<script src="Script/setup.js"></script>
+		<!--<script src="Script\WebWorker\WorldGenerator.js"></script>-->
+		<script src="Script\setup.js"></script>
 	</body>
 </html>
