--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
 		<script src="Script\Classes\Application.js"></script>
 		<script src="Script\Classes\ParticleSystem.js"></script>
 		<script src="Script\Classes\PointerLockControls.js"></script>
+		<script src="Script\Classes\ExplorerControl.js"></script>
 		<script src="Script\Generic\Interactor.js"></script>
 		<script src="Script\Generic\Logger.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
 		<script src="Script\Modules\ThreejsHandler.js"></script>
-		<script src="Script\Modules\WorldGen1.js"></script>
-		<script src="Script\Modules\WorldGen2.js"></script>
 		<script src="Script\Modules\ButtonGen.js"></script>
-		<script src="Script\Modules\ExplorerControls.js"></script>
+		<script src="Script\Modules\WorldGen1.js"></script>
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
 		<script src="Script\Reusable\Polyfill.js"></script>
-		<!--<script src="Script\WebWorker\WorldGenerator.js"></script>-->
 		<script src="Script\setup.js"></script>
 	</body>
 </html>
