Added fallback for systems without workers

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
 		<script src="Script\Modules\ThreejsHandler.js"></script>
 		<script src="Script\Modules\ButtonGen.js"></script>
+		<script src="Script\Modules\FakeWorldGen.js"></script>
 		<script src="Script\Modules\WorldGen1.js"></script>
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
