Added Text Shadow and WorkerBase to .html
WorkerBase has things like constants for chunkSize and other usefull
functions

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 	</head>
 	<body style="background-color:#CCC;width:100%;height:100vh;overflow:hidden;margin:0;padding:0;">
 		<div id="main" style="position:absolute;width:100%;height:100%;display:flex;align-items:center;justify-content:center;font-family:Verdana,Geneva,sans-serif;color:#333;">
-			<div id="primary" style="text-align:center;"><div style="font-size:48px;">Loading</div><div style="font-size:12px;margin-top:5px;">Downloading javascript files</div></div>
+			<div id="primary" style="text-align:center;"><div style="font-size:48px;text-shadow: 0px 0px 4px #fff;">Loading</div><div style="font-size:12px;margin-top:5px;text-shadow: 0px 0px 2px #fff;">Downloading javascript files</div></div>
 			<div id="secondary" style="position:absolute;top:90%;"><span style="font-size:16px;">javascript must be enabled</span></div>
 		</div>
 		<script src="Script\Libraries\FastSimplexNoise.js"></script>
 		<script src="Script\Libraries\three.js"></script>
 		<script src="Script\Classes\Application.js"></script>
-		<script src="Script\Classes\ParticleSystem.js"></script>
-		<script src="Script\Classes\PointerLockControls.js"></script>
 		<script src="Script\Classes\ExplorerControl.js"></script>
+		<script src="Script\Classes\ParticleSystem.js"></script>
+		<script src="Script\Classes\Performancer.js"></script>
+		<script src="Script\Classes\PointerLockControls.js"></script>
+		<script src="Script\Classes\WorldHandler.js"></script>
 		<script src="Script\Generic\Interactor.js"></script>
 		<script src="Script\Generic\Logger.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
@@ -26,6 +28,8 @@
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
 		<script src="Script\Reusable\Polyfill.js"></script>
+		<script src="Script\WorldGeneration\WorkerBase.js"></script>
+		<script src="Script\WorldGeneration\WorldDataArray.js"></script>
 		<script src="Script\setup.js"></script>
 	</body>
 </html>
