Animation Setup for Preview Creation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<script src="Script\Classes\WorldHandler.js"></script>
 		<script src="Script\Generic\Interactor.js"></script>
 		<script src="Script\Generic\Logger.js"></script>
+		<script src="Script\Modules\AnimationModule.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
 		<script src="Script\Modules\ThreejsHandler.js"></script>
 		<script src="Script\Modules\ButtonGen.js"></script>
