--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<script src="Script\Reusable\Polyfill.js"></script>
 		<script src="Script\WorldGeneration\WorkerBase.js"></script>
 		<script src="Script\WorldGeneration\WorldDataArray.js"></script>
+		<script src="https://cdn.rawgit.com/GuilhermeRossato/InterpolationModule/master/FastInterpolation.js"></script>
 		<script src="Script\setup.js"></script>
 	</body>
 </html>
