Application became a Module

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		</div>
 		<script src="Script\Libraries\FastSimplexNoise.js"></script>
 		<script src="Script\Libraries\three.js"></script>
-		<script src="Script\Classes\Application.js"></script>
 		<script src="Script\Classes\ExplorerControl.js"></script>
 		<script src="Script\Classes\ParticleSystem.js"></script>
 		<script src="Script\Classes\Performancer.js"></script>
@@ -20,6 +19,7 @@
 		<script src="Script\Classes\WorldHandler.js"></script>
 		<script src="Script\Generic\Interactor.js"></script>
 		<script src="Script\Generic\Logger.js"></script>
+		<script src="Script\Modules\Application.js"></script>
 		<script src="Script\Modules\AnimationModule.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
 		<script src="Script\Modules\ThreejsHandler.js"></script>
@@ -29,6 +29,8 @@
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
 		<script src="Script\Reusable\Polyfill.js"></script>
+		<script src="Script\WorldGeneration\WorkerWrapper.js"></script>
+		<script src="Script\WorldGeneration\Chunk.js"></script>
 		<script src="Script\WorldGeneration\WorkerBase.js"></script>
 		<script src="Script\WorldGeneration\WorldDataArray.js"></script>
 		<script src="https://cdn.rawgit.com/GuilhermeRossato/InterpolationModule/master/FastInterpolation.js"></script>
