--- a/index.html
+++ b/index.html
@@ -3,36 +3,39 @@
 	<head>
 		<title>Voxel World Gen - Threejs Experiment</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	</head>
-	<body style="background-color:#CCC;width:100%;height:100vh;overflow:hidden;margin:0;padding:0;">
+	<body style="background-color:#CCC;width:100%;height:100vh;overflow:hidden;margin:0;padding:0;font-size:2vmax;text-shadow: 0px 0px 2px #fff;">
 		<div id="main" style="position:absolute;width:100%;height:100%;display:flex;align-items:center;justify-content:center;font-family:Verdana,Geneva,sans-serif;color:#333;">
-			<div id="primary" style="text-align:center;"><div style="font-size:48px;text-shadow: 0px 0px 4px #fff;">Loading</div><div style="font-size:12px;margin-top:5px;text-shadow: 0px 0px 2px #fff;">Downloading javascript files</div></div>
-			<div id="secondary" style="position:absolute;top:90%;"><span style="font-size:16px;">javascript must be enabled</span></div>
+			<div id="primary" style="text-align:center;"><div style="font-size:3em;">Loading</div><div style="margin-top:5px;">Downloading javascript files</div></div>
+			<div id="secondary" style="position:absolute;top:90%;"><span>javascript must be enabled</span></div>
 		</div>
+		<script src="Script\Libraries\alea.min.js"></script>
 		<script src="Script\Libraries\FastSimplexNoise.js"></script>
+		<script src="Script\Libraries\Jonas_WagnerSimplexNoise.js"></script>
 		<script src="Script\Libraries\three.js"></script>
+		<script src="Script\Libraries\ThreejsSimplexNoise.js"></script>
 		<script src="Script\Classes\ExplorerControl.js"></script>
+		<script src="Script\Classes\Interactor.js"></script>
 		<script src="Script\Classes\ParticleSystem.js"></script>
 		<script src="Script\Classes\Performancer.js"></script>
 		<script src="Script\Classes\PointerLockControls.js"></script>
-		<script src="Script\Classes\WorldHandler.js"></script>
-		<script src="Script\Generic\Interactor.js"></script>
-		<script src="Script\Generic\Logger.js"></script>
-		<script src="Script\Modules\Application.js"></script>
 		<script src="Script\Modules\AnimationModule.js"></script>
+		<script src="Script\Modules\Application.js"></script>
+		<script src="Script\Modules\ButtonGen.js"></script>
 		<script src="Script\Modules\StepUpdatePattern.js"></script>
 		<script src="Script\Modules\ThreejsHandler.js"></script>
-		<script src="Script\Modules\ButtonGen.js"></script>
-		<script src="Script\Modules\FakeWorldGen.js"></script>
-		<script src="Script\Modules\WorldGen1.js"></script>
+		<script src="Script\Modules\Menu\Menu.js"></script>
 		<script src="Script\Reusable\BezierFunctions.js"></script>
 		<script src="Script\Reusable\CookieFunctions.js"></script>
 		<script src="Script\Reusable\Polyfill.js"></script>
-		<script src="Script\WorldGeneration\WorkerWrapper.js"></script>
-		<script src="Script\WorldGeneration\Chunk.js"></script>
-		<script src="Script\WorldGeneration\WorkerBase.js"></script>
-		<script src="Script\WorldGeneration\WorldDataArray.js"></script>
+		<script src="Script\World\WorldBase.js"></script>
+		<script src="Script\World\WorldDataArray.js"></script>
+		<script src="Script\World\Handling\Chunk.js"></script>
+		<script src="Script\World\Handling\ChunkAdder.js"></script>
+		<script src="Script\World\Handling\ChunkRemover.js"></script>
+		<script src="Script\World\Handling\WorkerWrapper.js"></script>
+		<script src="Script\World\Handling\WorldHandler.js"></script>
 		<script src="https://cdn.rawgit.com/GuilhermeRossato/InterpolationModule/master/FastInterpolation.js"></script>
 		<script src="Script\setup.js"></script>
 	</body>
