--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 	</head>
 	<body style="background-color:#CCC;width:100%;height:100vh;overflow:hidden;margin:0;padding:0;font-size:2vmax;text-shadow: 0px 0px 2px #fff;">
-		<div id="main" style="position:absolute;width:100%;height:100%;display:flex;align-items:center;justify-content:center;font-family:Verdana,Geneva,sans-serif;color:#333;">
-			<div id="primary" style="text-align:center;"><div style="font-size:3em;">Loading</div><div style="margin-top:5px;">Downloading javascript files</div></div>
+		<div id="main" style="position:absolute;width:100%;height:100%;display:flex;align-items:center;justify-content:center;font-family:Verdana,Geneva,sans-serif;color:#171717;">
+			<div id="primary" style="text-align:center;"><div style="font-size:3em;">Loading</div><div style="margin-top:5px;font-weight:bold;">Downloading javascript files</div></div>
 			<div id="secondary" style="position:absolute;top:90%;"><span>javascript must be enabled</span></div>
 		</div>
 		<script src="Script\Libraries\alea.min.js"></script>
